--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "flatdir"
+name = "slugfiles"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = { version = "4.5.3", features = ["derive"] }
-normalize-path = "0.2.1"
-walkdir = "2.5.0"
+clap = { version = "*", features = ["derive"] }
+normalize-path = "*"
 anyhow = "*"
 pathdiff = "*"
 slugify = "*"
