--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -67,7 +67,7 @@ jobs:
           profile: release
       - run: |
           set -e
-          cd target/${{ matrix.config.os }}-${{ matrix.config.arch }}/release
+          cd ${{ github.workspace }}/target/${{ matrix.config.os }}-${{ matrix.config.arch }}/release
           tar -cJvf ../flatdir-${{ matrix.config.os }}-${{ matrix.config.arch }}.tar.xz /*
           tar -czvf ../flatdir-${{ matrix.config.os }}-${{ matrix.config.arch }}.tar.gz /*
       - uses: actions/upload-artifact@v4
