--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -65,11 +65,6 @@ jobs:
           os: "${{ matrix.config.os }}"
           arch: "${{ matrix.config.arch }}"
           profile: release
-      - run: |
-          set -e
-          cd ${{ github.workspace }}/target/${{ matrix.config.os }}-${{ matrix.config.arch }}/release
-          tar -cJvf ../flatdir-${{ matrix.config.os }}-${{ matrix.config.arch }}.tar.xz ./*
-          tar -czvf ../flatdir-${{ matrix.config.os }}-${{ matrix.config.arch }}.tar.gz ./*
       - uses: actions/upload-artifact@v4
         with:
           name: flatdir-${{ matrix.config.os }}-${{ matrix.config.arch }}
@@ -92,6 +87,8 @@ jobs:
 
           ls -l -a
           ls -l -a flatdir-linux-amd64
+          ls -l -a flatdir-linux-amd64/release
+          
           # TAG="$(date -u +"v%Y.%m.%d.%H%M").${GITHUB_SHA::4}"
           # echo "Tag: ${TAG}"
 
