--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -85,7 +85,14 @@ jobs:
         run: |
           set -e
 
-          TAG="$(date -u +"v%Y.%m.%d.%H%M").${GITHUB_SHA::4}"
+          LAST_TAG=$(curl -sSL https://api.github.com/repos/alshdavid/flatdir/releases/latest | jq ".tag_name" | cut -d "." -f 3)
+          if [ "$LAST_TAG" = "" ]; then
+            LAST_TAG="0"
+          fi
+          declare -i var="$LAST_TAG"
+          var=$var+1
+          TAG="0.0.$var"
+
           echo "Tag: ${TAG}"
 
           cd ${{ github.workspace }}/flatdir-linux-amd64/release
