--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -85,7 +85,7 @@ jobs:
         run: |
           set -e
 
-          LAST_TAG=$(curl -sSL https://api.github.com/repos/alshdavid/flatdir/releases/latest | jq ".tag_name" | cut -d "." -f 3 | tr -d '"')
+          LAST_TAG=$(curl -sSL https://api.github.com/repos/alshdavid/flatdir/releases/latest | jq -r ".tag_name" | cut -d "." -f 3)
           if [ "$LAST_TAG" = "" ]; then
             LAST_TAG="0"
           fi
